--- a/frontend/app/components/Header/Header.module.css
+++ b/frontend/app/components/Header/Header.module.css
@@ -44,7 +44,7 @@
     font-size: 19px;
     padding: 8px 12px;
     border-radius: 10px;
-    background-color: #4338ca;
+    background-color: #4338ca !important;
     color: white;
     height: 100%;
 }
