--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -12,7 +12,7 @@ a,Link{
     text-decoration: none;
 }
 
-button{
+button, button:active, button:focus{
     border: none;
     background-color: white;
 }
