--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,23 +1,26 @@
-*{
-    padding: 0;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+@import "tailwindcss";
+
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
-ul{
-    list-style-type: none;
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
 }
 
-a,Link{
-    text-decoration: none;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
 }
 
-button, button:active, button:focus{
-    border: none;
-    background-color: white;
-}
-
-
-h1,h2,h3,h4,h5,h6{
-    font-weight: 500;
+body {
+  background: var(--background);
+  color: var(--foreground);
+  font-family: Arial, Helvetica, sans-serif;
 }
