feat: сделал динамические ссылки в хедере

--- a/frontend/app/components/AuthForm/AuthFrom.module.css
+++ b/frontend/app/components/AuthForm/AuthFrom.module.css
@@ -53,6 +53,11 @@
     cursor: pointer;
 }
 
+.auth_button_disabled{
+    background-color: #4338ca !important;
+    opacity: 0.5;
+}
+
 .response {
     font-size: 17px;
     margin-top: 4px;
