--- a/frontend/app/components/Popup/Popup.module.css
+++ b/frontend/app/components/Popup/Popup.module.css
@@ -11,7 +11,8 @@
 
 .main {
     width: 500px;
-    height: 340px;
+    height: 350px;
+    padding: 32px 24px;
     box-sizing: border-box;
     border-radius: 20px;
 
@@ -22,7 +23,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 
     background-color: white;
 
