--- a/frontend/app/components/Header/Header.module.css
+++ b/frontend/app/components/Header/Header.module.css
@@ -19,7 +19,6 @@
 .main_title{
     font-size: 29px;
     font-weight: 700;
-    color: #4338ca;
 }
 
 .button_list {
@@ -27,10 +26,15 @@
     align-items: center;
     padding-bottom: 2px;
     gap: 3vw;
+    
+    li a {
+      font-size: 20px;
+      color: hsl(240, 63%, 50%) !important;
+    }
 }
 
 .button{
-    font-size: 18px;
+    font-size: 20px;
     padding-bottom: 2px;
 }
 
@@ -44,11 +48,18 @@
     font-size: 19px;
     padding: 8px 12px;
     border-radius: 10px;
-    background-color: #4338ca !important;
-    color: white;
+    background-color: var(--color-primary);
+    color: var(--bg-primary);
     height: 100%;
+    cursor: pointer;
 }
 
 .auth_button:hover{
-    cursor: pointer;
+  background: var(--bg-secondary);
+  color: var(--color-secondary);
+}
+
+.auth-buttons {
+  display: flex;
+  gap: 20px;
 }
