--- a/frontend/app/components/Header/Header.module.css
+++ b/frontend/app/components/Header/Header.module.css
@@ -36,12 +36,29 @@
 .button{
     font-size: 20px;
     padding-bottom: 2px;
+    position: relative;
 }
 
 .button:hover {
     padding-bottom: 0;
     border-bottom: 2px solid black;
     cursor: pointer;
+}
+
+.order-badge {
+    position: absolute;
+    top: -8px;
+    right: -12px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: hsl(0, 70%, 50%);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    font-weight: 700;
 }
 
 .auth_button {
