--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -3,6 +3,12 @@
     justify-content: center;
 }
 
+.title-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .title_section{
     display: flex;
     flex-direction: column;
