--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -109,3 +109,15 @@ button:hover{
   padding: 44px 80px;
   height: calc(100% - 88px - 8vh - 0.7vh);
 }
+
+.page-loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -o-transform: translateX(-50%) translateY(-50%);
+}
