feat: сделал страницу изменения данных для админа

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -107,7 +107,7 @@ button:hover{
 
 .main-container {
   padding: 44px 80px;
-  height: calc(100% - 88px - 8vh - 0.7vh);
+  /* height: calc(100% - 88px - 8vh - 0.7vh); */
 }
 
 .page-loading {
