--- a/frontend/app/components/Header/Header.module.css
+++ b/frontend/app/components/Header/Header.module.css
@@ -19,7 +19,6 @@
 .main_title{
     font-size: 29px;
     font-weight: 700;
-    color: #4338ca;
 }
 
 .button_list {
@@ -27,11 +26,17 @@
     align-items: center;
     padding-bottom: 2px;
     gap: 3vw;
+    
+    li a {
+      font-size: 20px;
+      color: hsl(240, 63%, 50%) !important;
+    }
 }
 
 .button{
-    font-size: 18px;
+    font-size: 20px;
     padding-bottom: 2px;
+    position: relative;
 }
 
 .button:hover {
@@ -40,15 +45,38 @@
     cursor: pointer;
 }
 
+.order-badge {
+    position: absolute;
+    top: -8px;
+    right: -12px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: hsl(0, 70%, 50%);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    font-weight: 700;
+}
+
 .auth_button {
     font-size: 19px;
     padding: 8px 12px;
     border-radius: 10px;
-    background-color: #4338ca !important;
-    color: white;
+    background-color: var(--color-primary);
+    color: var(--bg-primary);
     height: 100%;
+    cursor: pointer;
 }
 
 .auth_button:hover{
-    cursor: pointer;
+  background: var(--bg-secondary);
+  color: var(--color-secondary);
+}
+
+.auth-buttons {
+  display: flex;
+  gap: 20px;
 }
