--- a/frontend/app/components/student/CurrentOrder/CurrentOrder.module.css
+++ b/frontend/app/components/student/CurrentOrder/CurrentOrder.module.css
@@ -59,10 +59,8 @@
 }
 
 .order-header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	gap: 0.75rem;
+	font-size: 25px;
+	text-align: center;
 }
 
 .order-date {
@@ -159,4 +157,13 @@
 }
 .cook_panel_digit{
 	font-size: 25px;
+}
+.receive-button-cook{
+	/* display: block; */
+}
+.cook_div{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 30px;
 }
