feat: добавил обновление meals

--- a/frontend/app/components/admin/EditData/MealEditModal/MealEditModal.module.css
+++ b/frontend/app/components/admin/EditData/MealEditModal/MealEditModal.module.css
@@ -275,3 +275,11 @@
 .saveBtn:hover {
 	background: #2563eb;
 }
+
+.addButton {
+  margin-right: 12px;
+}
+
+.removeButton {
+  margin-left: 12px;
+}
