--- a/frontend/app/buy-requests-cook/page.module.css
+++ b/frontend/app/buy-requests-cook/page.module.css
@@ -6,6 +6,8 @@
 }
 
 .title {
+	display: flex;
+	align-items: center;
 	margin: 0 0 24px 0;
 	font-size: 32px;
 	font-weight: 600;
@@ -20,4 +22,14 @@
 	.title {
 		font-size: 24px;
 	}
+}
+.header{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.ingr_div{
+	display: flex;
+	gap: 20px;
+	margin-top: 30px;
 }
