--- a/frontend/app/buy-requests-cook/page.module.css
+++ b/frontend/app/buy-requests-cook/page.module.css
@@ -33,3 +33,33 @@
 	gap: 20px;
 	margin-top: 30px;
 }
+.select{
+	font-size: 18px;
+	border: none;
+    outline: none;
+	padding: 1px;
+	margin: 0 1px;
+	border: 1px solid rgba(0, 0, 0, 0.5);
+}
+.select:hover{
+	border: 1px solid #000;
+}
+.input{
+	font-size: 18px;
+	text-align: center;
+
+    outline: none;
+	border: none;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+.input:hover{
+	border-bottom: 1px solid #000;
+}
+.input:focus{
+	border-bottom: 1px solid #000;
+}
+.button_div{
+	display: flex;
+	justify-content: center;
+	margin-top: 30px;
+}
