--- a/frontend/app/feedback/page.module.css
+++ b/frontend/app/feedback/page.module.css
@@ -145,6 +145,10 @@
 }
 
 .feedback-card {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
 	background-color: var(--bg-secondary);
 	padding: 24px;
 	border-radius: 15px;
@@ -154,6 +158,21 @@
 		transform: translateY(-2px);
 		box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 	}
+}
+.change-button{
+	border: 2px solid var(--color-primary);
+}
+.change-button:hover{
+	border: 2px solid var(--color-primary);
+}
+.delete-button{
+	margin-left: 30px;
+	background-color: rgba(0, 0, 0, 0);
+	color: black;
+	border: 2px solid rgb(255, 0, 0);
+}
+.delete-button:hover{
+	background-color: rgb(255, 0, 0);
 }
 
 .feedback-header {
