--- a/frontend/app/components/Popup/Popup.module.css
+++ b/frontend/app/components/Popup/Popup.module.css
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
 
@@ -15,7 +15,7 @@
     box-sizing: border-box;
     border-radius: 20px;
     
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 50%;
 
