--- a/frontend/app/components/Notification/Notification.module.css
+++ b/frontend/app/components/Notification/Notification.module.css
@@ -3,7 +3,7 @@
     padding: 10px 20px;
     border-radius: 10px;
 
-    position: absolute;
+    position: fixed;
     left: 20px;
     top: 20px;
     
